# ice_thermodynamics

./: .gitignore  CMakeLists.txt  main.cpp
Cpplib/: .gitignore  .test.swp  CMakeLists.txt  Notation.txt  animate.py  plot_snap.py  plot_ts.py  test_script.txt
Cpplib/configs/: test_config.json
Cpplib/examples/: CMakeLists.txt
Cpplib/examples/inmcm0d_example/: main.f90
Cpplib/examples/itinmcm0d_example/: CMakeLists.txt  main.f90
Cpplib/examples/itinmcm1d_example/: CMakeLists.txt  main.f90
Cpplib/examples/itslav_example/: CMakeLists.txt  main.f90
Cpplib/source/: CMakeLists.txt
Cpplib/source/applications/: CMakeLists.txt
Cpplib/source/applications/itinmcm/: CMakeLists.txt  itinmcm.cpp  itinmcm.f90  itinmcm.hpp  itinmcm.mod  itinmcm0d.cpp  itinmcm0d.f90  itinmcm0d.hpp  itinmcm0d.mod  itslav.mod
Cpplib/source/applications/itslav/: CMakeLists.txt  itslav.cpp  itslav.f90  itslav.hpp  itslav.mod
Cpplib/source/engine/: CMakeLists.txt  constants.cpp  glacier1d.cpp  params.cpp  sea_ice_1d.cpp  seaice0d_snow0d.cpp  seaice1d.cpp  seaice1d_snow0d.cpp  seaice_solver.cpp  solver.cpp  solver_1dice.cpp
Cpplib/source/headers/: CMakeLists.txt  config.hpp  constants.hpp  defines.hpp  icethermo.hpp  matvec.hpp  mesh.hpp  params.hpp  solver.hpp  tools.hpp
Cpplib/source/mesh/: CMakeLists.txt  mesh.cpp
Cpplib/source/tools/: CMakeLists.txt  bisection_solver.cpp  config.cpp  matvec.cpp  secant_solver.cpp  thomas_solver.cpp
Cpplib/source/vis/: plot_snap.py
Cpplib/tests/: CMakeLists.txt
Cpplib/tests/concat_tests/: CMakeLists.txt  main.cpp
Cpplib/tests/constants_tests/: CMakeLists.txt  main.cpp
Cpplib/tests/matrix_test/: .gitignore  CMakeLists.txt  main.cpp  matrix_left_diag.txt  matrix_main_diag.txt  matrix_rhs.txt  matrix_right_diag.txt
Cpplib/tests/mesh_tests/: CMakeLists.txt  main.cpp
Cpplib/tests/secant_test/: CMakeLists.txt  main.cpp
Cpplib/tests/solver_tests/: CMakeLists.txt  ice1d.cpp
Cpplib/tests/solver_tests/1dice_0dsnow_cycle/: 1dice_0dsnow_cycle.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/1dice_0dsnow_freezing/: 1dice_0dsnow_freezing.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/1dice_0dsnow_melting/: 1dice_0dsnow_melting.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/1dice_1dsnow_cycle/: CMakeLists.txt
Cpplib/tests/solver_tests/1dice_1dsnow_freezing/: CMakeLists.txt
Cpplib/tests/solver_tests/1dice_1dsnow_melting/: CMakeLists.txt
Cpplib/tests/solver_tests/1dice_cycle/: 1dice_cycle.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/1dice_freezing/: 1dice_freezing.cpp  print_snap.py
Cpplib/tests/solver_tests/1dice_melting/: 1dice_melting.cpp  print_snap.py
Cpplib/tests/solver_tests/glacier/1dice_0dsnow_cycle/: CMakeLists.txt
Cpplib/tests/solver_tests/glacier/1dice_0dsnow_freezing/: CMakeLists.txt
Cpplib/tests/solver_tests/glacier/1dice_0dsnow_melting/: CMakeLists.txt
Cpplib/tests/solver_tests/glacier/1dice_cycle/: CMakeLists.txt
Cpplib/tests/solver_tests/glacier/1dice_freezing/: 1dglacier_freezing.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/glacier/1dice_melting/: CMakeLists.txt
Cpplib/tests/solver_tests/sea_ice/: CMakeLists.txt
Cpplib/tests/solver_tests/sea_ice/0dice_0dsnow_cycle/: 0dice_0dsnow_cycle.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/sea_ice/0ditinmcm/: CMakeLists.txt  main.cpp
Cpplib/tests/solver_tests/sea_ice/1dice_0dsnow_cycle/: 1dice_0dsnow_cycle.cpp
Cpplib/tests/solver_tests/sea_ice/1dice_0dsnow_freezing/: 1dice_0dsnow_freezing.cpp
Cpplib/tests/solver_tests/sea_ice/1dice_0dsnow_melting/: 1dice_0dsnow_melting.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/sea_ice/1dice_cycle/: 1dice_cycle.cpp
Cpplib/tests/solver_tests/sea_ice/1dice_freezing/: 1dice_freezing.cpp  CMakeLists.txt
Cpplib/tests/solver_tests/sea_ice/1dice_melting/: 1dice_melting.cpp  CMakeLists.txt
Cpplib/tests/thomas_test/: CMakeLists.txt  main.cpp
Cpplib/tests/thomas_tests/: CMakeLists.txt  main.cpp
Headers/: CMakeLists.txt  ice_thermo.h  output_operators.h  thermo_view.h  thomas_solver.h  vec_norms.h  vec_operators.h
IceThermo/: CMakeLists.txt  ice_thermo.cpp
Python/: .gitignore  .~lock.full_data.csv#  02_20_01_22.ipynb  Analytical_experiments.ipynb  Ice_with_snow.ipynb  Python_vs_Cpp_experiments.ipynb  SHEBA_experiments.ipynb  check_matrix.ipynb  full_data.csv  print_snap_test.ipynb  test0d.ipynb  view_data.ipynb
Python/.ipynb_checkpoints/: 02_20_01_22-checkpoint.ipynb  Ice_with_snow-checkpoint.ipynb  view_data-checkpoint.ipynb
Python/Validation/: Description.xlsx  full_data.csv
Python/test/: python_year_ice000000.json  python_year_ice000001.json  python_year_ice000002.json  python_year_ice000003.json  python_year_ice000004.json  python_year_ice000005.json  python_year_ice000006.json  python_year_ice000007.json  python_year_ice000008.json  python_year_ice000009.json  python_year_ice000010.json  python_year_ice000011.json  python_year_ice000012.json  python_year_ice000013.json  python_year_ice000014.json  python_year_ice000015.json  python_year_ice000016.json  python_year_ice000017.json  python_year_ice000018.json  python_year_ice000019.json  python_year_ice000020.json  python_year_ice000021.json  python_year_ice000022.json  python_year_ice000023.json  python_year_ice000024.json  python_year_ice000025.json  python_year_ice000026.json  python_year_ice000027.json  python_year_ice000028.json  python_year_ice000029.json  python_year_ice000030.json  python_year_ice000031.json  python_year_ice000032.json  python_year_ice000033.json  python_year_ice000034.json  python_year_ice000035.json  python_year_ice000036.json  python_year_ice000037.json  python_year_ice000038.json  python_year_ice000039.json  (+2661 more)
Python/utils/: engine.py  engine0d.py  plot_snap.py  visualizer.py
Solvers/: CMakeLists.txt  thomas_solver.cpp
Support/: CMakeLists.txt  vec_norms.cpp
ThermoView/: CMakeLists.txt  thermo_view.cpp
Validation/: view_data.ipynb
Validation/SHEBA_Data/: 04-README.TXT
